<resources>
    <string name="app_name">Find-It</string>
    <string name="navigation_drawer_open">Abrir menu lateral</string>
    <string name="navigation_drawer_close">Fechar menu lateral</string>
    <string name="action_settings">Configurações</string>
    <string name="title_activity_login">Entrar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Conectar</string>
    <string name="action_sign_in_short">Conectar</string>
    <string name="action_sign_up">Cadastrar</string>
    <string name="prompt_user_contact">WhatsApp</string>
    <string name="prompt_name">Nome</string>
    <string name="prompt_repeat_password">Repita a Senha</string>
    <string name="error_invalid_email">Email inválido</string>
    <string name="error_invalid_contact">Telefone inválido</string>
    <string name="error_invalid_username">Este nome é muito curto</string>
    <string name="error_invalid_password">Esta senha é muito curta</string>
    <string name="error_repeat_password">As senhas não conferem</string>
    <string name="error_incorrect_password">Senha Incoreta</string>
    <string name="error_field_required">Campo Obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string-array name="situation">
        <item>Encontrado</item>
        <item>Perdido</item>
    </string-array>
    <string-array name="category">
        <item>Categoria</item>
        <item>Acessórios</item>
        <item>Animais</item>
        <item>Bolsas e Mochilas</item>
        <item>Cadernos e Livros</item>
        <item>Cartões e Documentos</item>
        <item>Celulares e Smartphones</item>
        <item>Chaves</item>
        <item>Eletrônicos</item>
        <item>Outros</item>
    </string-array>
    <string name="prompt_description">Descrição do Item</string>
    <string name="prompt_position">Local</string>
    <string name="prompt_data">Data</string>
    <string name="help_logo">Logotipo da Aplicação</string>
    <string name="welcome_to_app">Bem-Vindo ao Find-It</string>
    <string name="title_activity_insert">Inserir</string>
    <string name="title_activity_sign_up">Cadastrar Usuário</string>

    <string name="all_items">Todos os Itens</string>
    <string name="lost_item">Meus Itens Perdidos</string>
    <string name="found_item">Meus Itens Encontrados</string>
    <string name="returned_item">Meus Itens Devolvidos</string>

    <string-array name="nav_item_activity_titles">
        <item>Find-It</item>
        <item>@string/lost_item</item>
        <item>@string/found_item</item>
        <item>@string/returned_item</item>
    </string-array>

    <string-array name="list_item_descriptions">
        <item>Todos os Itens :</item>
        <item>Itens Perdidos :</item>
        <item>Itens Encontrados :</item>
        <item>Itens Devolvidos :</item>
    </string-array>

    <string name="not_results">Nenhum Item</string>

    <string name="error_whatsapp_not_installed">WhatsApp não Instalado</string>
    <string name="title_notification">Match de Item</string>
    <string name="first_part_message_notification">O seu Item &quot;</string>
    <string name="second_part_message_notification">&quot; teve um Match</string>
    <string name="button_notification">Conversar com quem o Encontrou</string>

    <string name="insert_item_success">Item Cadastrado com Sucesso!</string>
    <string name="insert_item_error">Não foi Possível Cadastrar o Item! Tente novamente...</string>

    <string name="choose_category">Escolha uma categoria</string>
    <string name="reference_point">Ponto de Referência</string>
    <string name="insert_reference_point">Insira um ponto de Referência onde o Item foi Encontrado/Perdido!</string>
    <string name="insert_reference_radius">Insira um Raio de Localização onde o Item foi Encontrado/Perdido!</string>
    
    <string name="no_internet_connectivity">Sem Conexão com a Internet</string>

    <string name="create_user_success">Usuário Cadastrado com Sucesso!</string>
    <string name="create_user_error">Não foi Possível Cadastrar o Usuário! Tente novamente...</string>

    <string name="lbl_alter">Alterar</string>
    <string name="lbl_cancel">Cancelar</string>

    <string name="alter_status_item_success">Status Alterado com Sucesso!</string>
    <string name="alter_status_item_error">Não foi possível Alterar o Status do Item! Tente novamente...</string>

    <string name="lbl_category">Categoria :\u0020</string>
    <string name="lbl_status">Status :\u0020</string>
    <string name="lbl_description">Descrição :\u0020</string>
    <string name="lbl_photos">Fotos:</string>

</resources>
