<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="0.0dip"
        android:layout_gravity="center"
        android:layout_marginBottom="8.0dip"
        android:layout_weight="1.0"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.0">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1.0">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="178.0dip"
                android:layout_height="176.0dip"
                android:layout_gravity="center"
                android:layout_marginBottom="30.0dip"
                android:adjustViewBounds="true"
                android:contentDescription="@string/help_logo"
                android:src="@drawable/logo_app" />

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10.0dip">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5.0dip"
                    android:paddingLeft="15.0dip"
                    android:paddingRight="15.0dip"
                    android:paddingTop="5.0dip">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_email_default"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        tools:ignore="RtlHardcoded" />
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10.0dip">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5.0dip"
                    android:paddingLeft="15.0dip"
                    android:paddingRight="15.0dip"
                    android:paddingTop="5.0dip">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_key_default"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="normal|actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        tools:ignore="RtlHardcoded" />
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16.0dip"
                android:background="@drawable/button_default"
                android:text="@string/action_sign_in"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:onClick="validarDados"/>

            <Button
                android:id="@+id/sign_up_button"
                style="?android:textAppearanceSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16.0dip"
                android:background="@drawable/button_default"
                android:text="@string/action_sign_up"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>