<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ProgressBar
        android:id="@+id/create_user_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="0.0dip"
        android:layout_gravity="center"
        android:layout_marginBottom="8.0dip"
        android:layout_weight="1.0"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/create_user_form"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15.0dip"
                    android:paddingRight="15.0dip">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_person_default"
                        android:hint="@string/prompt_name"
                        android:maxLines="1"
                        tools:ignore="RtlHardcoded" />
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15.0dip"
                    android:paddingRight="15.0dip">

                    <AutoCompleteTextView
                        android:id="@+id/email_sign_up"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_email_default"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        tools:ignore="RtlHardcoded" />
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15.0dip"
                    android:paddingRight="15.0dip">

                    <EditText
                        android:id="@+id/user_contact"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_whatsapp_default"
                        android:hint="@string/prompt_user_contact"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="normal|actionUnspecified"
                        android:maxLines="1"
                        tools:ignore="RtlHardcoded"
                        android:inputType="phone" />
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15.0dip"
                    android:paddingRight="15.0dip">

                    <EditText
                        android:id="@+id/password_sign_up"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_key_default"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="normal|actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        tools:ignore="RtlHardcoded" />
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15.0dip"
                    android:paddingRight="15.0dip">

                    <EditText
                        android:id="@+id/repeat_password_sign_up"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_key_default"
                        android:hint="@string/prompt_repeat_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="normal|actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        tools:ignore="RtlHardcoded" />
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/sign_up_button"
                style="@style/ButtonStyleDefault"
                android:theme="@style/ButtonStyleDefault"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:text="@string/action_sign_up"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>