<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="lps.com.br.find_it.InsertActivity"
    tools:showIn="@layout/activity_insert">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5.0dip"
                android:paddingLeft="15.0dip"
                android:paddingRight="15.0dip">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_name"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="normal|actionUnspecified"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5.0dip"
                android:paddingLeft="15.0dip"
                android:paddingRight="15.0dip">

                <EditText
                    android:id="@+id/description"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_description"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="normal|actionUnspecified"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spin_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:paddingLeft="15.0dip"
                android:paddingRight="15.0dip" />

            <Spinner
                android:id="@+id/spin_situation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.0dip"
                android:paddingLeft="15.0dip"
                android:paddingRight="15.0dip" />

            <fragment
                android:id="@+id/mapFragment"
                class="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="200.0dip"
                android:layout_marginTop="15.0dip" />

            <Button
                android:id="@+id/email_sign_in_button"
                style="@style/ButtonStyleDefault"
                android:theme="@style/ButtonStyleDefault"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15.0dip"
                android:text="@string/action_sign_up"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>